--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Metrophobic&display=swap');
 .popupChangeAlt{
-    background-color: rgba(107,119,141,1);
+    background-color: #ffffff;
     max-width: min-content;
     min-width: 250px;
     font-size: 20px;
@@ -8,12 +9,14 @@
     bottom: 0;
     padding: 10px;
     text-align: center;
-    color: #e7c944;
-    border-left: 3px solid #f6ec2a;
-    border-top: 3px solid #f6ec2a;
+    color: #3368F2;
+    border-left: 3px solid #3368F2;
+    border-top: 3px solid #3368F2;
     border-radius: 10px 0px 0px 0px;
-    font-family: Arial;
+    font-family: "Metropolis",sans-serif;
     z-index: 999;
+    line-height: 1.15;
+    font-weight: 500;
 }
 
 .popupChangeAlt .btns{
@@ -21,60 +24,57 @@
     align-items: center;
     justify-content: space-around;
     padding-top: 15px;
+    font-family: "Metropolis",sans-serif;
 }
 
 .popupChangeAlt input{
     width: 100%;
     font-size: 20px;
-    background-color: rgba(107,119,141,1);
-    color: #e7c944;
+    background-color: #fff;
+    color: #3368F2;
     margin-top: 20px;
     margin-bottom: 10px;
-    outline: #e7c944 ;
+    outline: #3368F2;
     box-sizing: border-box;
-    border: 2px solid rgba(255, 225, 108, 0.42);
+    border: 3px solid rgba(51, 104, 242, 0.36);
     transition: 0.5s;
+    font-family: "Metropolis",sans-serif;
 }
 .popupChangeAlt input:focus{
     transition: 0.5s;
-    border: 2px solid rgba(255, 225, 108, 1);
-    outline: #e7c944 ;
-    background-color: rgba(107,119,141,1);
+    border: 2px solid #3368F2;
+    outline: #3368F2;
+    background-color: rgba(51, 104, 242, 0.10);
 }
 
 .popupChangeAlt button{
-    color: #e7c944;
+    color: #3368F2;
     font-weight: bold;
     font-size: 18px;
     background-color: rgba(240, 248, 255, 0.42);
-    border: #e7c944;
+    border: #3368F2;
     border-radius: 5px;
 }
 .popupChangeAlt button{
-    color: rgba(231, 201, 68, 0.75);
-    font-weight: bold;
+    color: #3368F2;
+    font-weight: 400;
     font-size: 20px;
     background-color: rgba(240, 248, 255, 0);
-    border: #e7c944;
+    border: #3368F2;
     border-radius: 5px;
     transition: 0.5s;
-    border: 2px solid rgba(231, 201, 68, 0);
-    outline: #e7c944 ;
+    border: 3px solid rgba(0, 0, 0, 0.20);
+    outline: #3368F2;
 }
 
-.popupChangeAlt button:focus{
-    color: #e7c944;
-    background-color: rgba(240, 248, 255, 1);
-    border: 2px solid #e7c944;
-    border-radius: 5px;
-    transition: 0.5s;
-}
+
 .btns button:hover{
     cursor: pointer;
-
+    background-color: rgba(51, 104, 242, 0.38);
+    border: 3px solid #3368F2;
 }
 .imageActive{
-    border: 5px solid #e7c944;
+    border: 5px solid #3368F2;
     transform: scale(1.2);
 }
 
