--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Metrophobic&display=swap');
 .popupChangeAlt{
     background-color: #ffffff;
+    max-width: -webkit-min-content;
+    max-width: -moz-min-content;
     max-width: min-content;
     min-width: 250px;
     font-size: 20px;
@@ -20,8 +22,16 @@
 }
 
 .popupChangeAlt .btns{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     padding-top: 15px;
     font-family: "Metropolis",sans-serif;
@@ -35,12 +45,17 @@
     margin-top: 20px;
     margin-bottom: 10px;
     outline: #3368F2;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     border: 3px solid rgba(51, 104, 242, 0.36);
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
     font-family: "Metropolis",sans-serif;
 }
 .popupChangeAlt input:focus{
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
     border: 2px solid #3368F2;
     outline: #3368F2;
@@ -62,6 +77,8 @@
     background-color: rgba(240, 248, 255, 0);
     border: #3368F2;
     border-radius: 5px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
     border: 3px solid rgba(0, 0, 0, 0.20);
     outline: #3368F2;
@@ -75,6 +92,8 @@
 }
 .imageActive{
     border: 5px solid #3368F2;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
     transform: scale(1.2);
 }
 
